# MidiFi

./: .gitmodules  CMakeLists.txt  README.md
src/: Heap.cpp  MidiCollection.cpp  Parsing.cpp  main.cpp
